@@ -111,11 +111,12 @@ plotRetTimeDiffs <- function(object, plot = TRUE,
 }
 
 plot.some.features <- function(xx,
+                               identpep,
                                mse,
                                model,
                                ppmthreshold,
-                               nsd,                               
-                               xlim = c(40, 60), 
+                               nsd,
+                               xlim = c(40, 60),
                                ylim = c(1160, 1165)) {
   ## for EMRT mass, use [precursor|pretide].mhp.[hd]mse
   ## on the y axis, instead of calculating the mass
@@ -143,24 +144,19 @@ plot.some.features <- function(xx,
   text(xx$precursor.retT.quant, xx$peptide.mhp.quant,
        xx$peptide.seq, cex=.1, adj=c(0,1))
   ## mse pep3d data
-  points(mse$rt_min, mse$mwHPlus, 
+  points(mse$rt_min, mse$mwHPlus,
          col = "#FF000080", ## col2hcl("red", alpha=.5),
          cex = 0.2, pch = 3)
-  ## predicted
-  lo <- model$lo
   ## nsd
   mass.ranges <- estimate.mass.range(xx$peptide.mhp.ident, ppmthreshold)
-  ## from doHDMSePredictions 
-  .o <- order(xx$precursor.retT.ident)
-  .allpreds <- predict(model$lo, data.frame(precursor.retT.ident=xx$precursor.retT.ident), se=TRUE)
-  .sd <- .allpreds$se.fit[.o] * sqrt(model$lo$n)
-  .predicted <- xx$precursor.retT.ident - .allpreds$fit[.o]
-  .lower <- .predicted - (nsd * .sd)
-  .upper <- .predicted + (nsd * .sd)
-  stopifnot(all(.lower <= .upper))
-  rt.ranges <- cbind(.lower,
-                     .upper)
-  centers <- cbind(.predicted, xx$peptide.mhp.ident)
+
+  ## from doHDMSePredictions
+  prediction <- doHDMSePredictions(identpep, model, nsd)
+  pid <- match(xx$precursor.leID.ident, identpep$precursor.leID)
+
+  rt.ranges <- cbind(prediction$lower[pid],
+                     prediction$upper[pid])
+  centers <- cbind(prediction$predicted[pid], xx$peptide.mhp.ident)
   ## points(centers, pch=".")
   rect(rt.ranges[,1], mass.ranges[,1],
        rt.ranges[,2], mass.ranges[,2],
